[gd_scene load_steps=5 format=3 uid="uid://x1afb0ualkws"]

[ext_resource type="Texture2D" uid="uid://2ivxgqy2hyqj" path="res://graphics/player/player.png" id="1_8j03y"]
[ext_resource type="Script" path="res://scenes/levels/player.gd" id="1_ngiy1"]
[ext_resource type="PackedScene" uid="uid://bxyflcwly06fu" path="res://laser_vent.tscn" id="3_gjuwi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vnxsj"]
radius = 65.0
height = 130.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_ngiy1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_vnxsj")

[node name="LaserTimer" type="Timer" parent="."]
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(133, 23)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(134, 33)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(133, 16)

[node name="PlayerImg" type="Sprite2D" parent="."]
position = Vector2(35, 5)
rotation = 1.5708
texture = ExtResource("1_8j03y")

[node name="GrenadeStartPosition" type="Marker2D" parent="."]
position = Vector2(135, 24)

[node name="LaserVent" parent="." instance=ExtResource("3_gjuwi")]
position = Vector2(136, 23)

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_time_out"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_ready"]
